test/parallel/forall/checks/const-indices-blc.good
const-indices-blc.chpl:5: error: illegal lvalue in assignment
const-indices-blc.chpl:11: error: illegal lvalue in assignment
